--- a/package.json
+++ b/package.json
@@ -1,5 +1,19 @@
 {
+  "name": "servi_backend",
+  "version": "1.0.0",
+  "main": "app.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^2.2.0"
-  }
+    "cors": "^2.8.5",
+    "express": "^5.1.0",
+    "nodemon": "^3.1.10"
+  },
+  "type": "module",
+  "devDependencies": {},
+  "description": ""
 }
